--- a/DLUTToolBoxV3/App.xaml
+++ b/DLUTToolBoxV3/App.xaml
@@ -10,7 +10,7 @@
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <XamlControlsResources xmlns="using:Microsoft.UI.Xaml.Controls" />
-                <ResourceDictionary Source="ms-appx:///SettingsUI/Themes/Generic.xaml"/>
+                <ResourceDictionary Source="ms-appx:///WinUICommunity.Components/Themes/Generic.xaml"/>
                 <!-- Other merged dictionaries here -->
             </ResourceDictionary.MergedDictionaries>
             <!-- Other app resources here -->
